# space_invaders

./: .gitignore  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: bullet.c.137FC07A71425C82.idx  bullet.h.02517B2E158CF24E.idx  clock.c.5BCD556BF9423E9E.idx  clock.h.FD73D24CE7EE7C81.idx  destroy.c.1894E02FCA0AC5D8.idx  destroy.h.13CB542D46412101.idx  display.c.DF94FCD3CBB4B124.idx  display.h.1C23CFFC400C2936.idx  distroy.c.0745883F10B567A3.idx  distroy.h.49DB68C84AA14724.idx  footer.c.06259F1E91C02126.idx  footer.h.A43340AFFBE5D03F.idx  invaders.c.98A4B9BDA5A4A016.idx  invaders.h.04E7FF41F881ECD8.idx  keyboard.c.444C9AD8468E7AB0.idx  keyboard.h.3923C2AABF19B55C.idx  loop.c.E147A4CD98BEAD6E.idx  loop.h.DD0017A8FC693438.idx  main.c.36AF45C1FB2CD11C.idx  media.c.C506BBA0D20677A9.idx  media.h.17AA6FA02CAC7662.idx  score.c.D9CAD9EE57DFEF53.idx  score.h.02D9C1DE5C4ABC94.idx  ship.c.04CD215964895ED7.idx  ship.h.30A2D134BAEAEECD.idx  stb_image.h.31D0DFE71795AB29.idx  target.c.9880F5A5E633555A.idx  target.h.22C5EA0512F5D63C.idx  utils.c.A5182505D18A3F9E.idx  utils.h.9F6508A3E47A44FB.idx
src/: bullet.c  clock.c  display.c  distroy.c  footer.c  invaders.c  keyboard.c  loop.c  main.c  media.c  score.c  ship.c  target.c
src/include/: bullet.h  clock.h  display.h  distroy.h  footer.h  invaders.h  keyboard.h  loop.h  media.h  score.h  ship.h  target.h
